# localgpt

./: CLAUDE.md  Cargo.toml  README.md  config.example.toml
.claude/commands/: commit.md
docs/: EMBEDDING_OPTIONS.md  architecture.md  stt-bench-prompt-optimization.md  stt-bench-results.md  stt-semantic-evaluation.md  stt-server-design.md  voice-design.md  voice-impl-steps.md
docs/stt-bench-data/: results.json
src/: lib.rs  main.rs  utils.rs
src/agent/: mod.rs  providers.rs  sanitize.rs  session.rs  session_store.rs  skills.rs  system_prompt.rs  tools.rs
src/cli/: ask.rs  chat.rs  config.rs  daemon.rs  desktop.rs  mod.rs  security.rs
src/concurrency/: mod.rs  turn_gate.rs  workspace_lock.rs
src/config/: migrate.rs  mod.rs  schema.rs
src/desktop/: app.rs  mod.rs  state.rs
src/desktop/views/: mod.rs  sessions.rs  status.rs
src/discord/: mod.rs
src/heartbeat/: events.rs  mod.rs  runner.rs
src/memory/: embeddings.rs  index.rs  mod.rs  search.rs  watcher.rs  workspace.rs
src/sandbox/: mod.rs
src/security/: audit.rs  localgpt.rs  policy.rs  protected_files.rs  signing.rs  suffix.rs
src/server/: http.rs  mod.rs  telegram.rs  websocket.rs
src/voice/: agent_bridge.rs  audio.rs  config.rs  context_window.rs  dispatcher.rs  e2e_test.rs  gateway.rs  lrs.rs  mod.rs  playback.rs  receiver.rs  splitter.rs  ssrc_map.rs  transcript.rs  tts_cache.rs  tts_pipeline.rs  worker.rs
src/voice/provider/: mod.rs
src/voice/provider/stt/: mock.rs  mod.rs  ws.rs
src/voice/provider/tts/: aivis_speech.rs  mock.rs  mod.rs
ui/: app.js  index.html  style.css
